--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,22 +3,30 @@
 
 
 <div class="row">
-  <h2>To Make List</h2>
-  <ol>
-    {{#each burger_name}}
+  
+  <div class="col-md-6">
+    <h2>Devoured List</h2>
+  <ul>
+    {{#each burgers}}
       {{#if devoured}}
-        <button data-id="{{this.id}}" class="devourBurger">Devour</button>
+      <li>{{burger_name}}</li>
       {{/if}}
     {{/each}}
-  </ol>
+  </ul>
+  </div>
 
-  <h2>Devoured List</h2>
+<div class="col-md-6">
+  <h2>To Make List</h2>
   <ol>
-    {{#each burger_name}}
+    {{#each burgers}}
       {{#unless devoured}}
+      <li>
+        {{burger_name}} <button data-id={{this.id}} class="devourBurger">Devour</button>
+        </li>
       {{/unless}}
     {{/each}}
   </ol>
+  </div>
 </div>
 
 <div class="row">
