--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	<title>Eat-Da-Burger!</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
-	{{!-- <script src="/assets/js/cats.js"></script> --}}
+	<script src="/assets/js/burgers.js"></script>
 </head>
 
 <body>
