--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,43 +1,61 @@
-<!-- From 13.17 -->
-<h1>Eat-Da-Burger!</h1>
+<!-- inserted into the body -->
 
-
-<div class="row">
-
-  <div class="col-md-6">
-    <h2>Devoured List</h2>
-    <ul>
-      {{#each burgers}}
-      {{#if devoured}}
-        <li>{{burger_name}}</li>
-      {{/if}}
-      {{/each}}
-    </ul>
+<div class="container">
+  <div class="row my-3 py-3">
+    <!-- for spacing -->
   </div>
 
-  <div class="col-md-6">
-    <h2>To Make List</h2>
-    <ol>
-      {{#each burgers}}
-      {{#unless devoured}}
-      <li>
-        {{burger_name}} <button data-id={{this.id}} class="devourBurger">Devour</button>
-      </li>
-      {{/unless}}
-      {{/each}}
-    </ol>
+  <div class="row my-1 py-1">
+    <div class="col-lg-12 text-white text-center">
+      <h1>Eat-Da-Burger!</h1>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <h2>Add a Burger</h2>
-  <form class="create-form">
+  <div class="row text-white">
 
-    <div class="form-group">
-      <label for="bur">Burger Name:</label>
-      <input type="text" id="bur" name="name">
+    <div class="col-md-6 text-center">
+
+      <h2>To Make List</h2>
+      <ol>
+        {{#each burgers}}
+        {{#unless devoured}}
+        <li>
+          {{burger_name}} <button data-id={{this.id}} class="devourBurger">Devour</button>
+        </li>
+        {{/unless}}
+        {{/each}}
+      </ol>
     </div>
 
-    <button type="submit">Confirm Burger</button>
-  </form>
+    <div class="col-md-6 text-center">
+      <h2>Devoured List</h2>
+      <ol>
+        {{#each burgers}}
+        {{#if devoured}}
+        <li>{{burger_name}}</li>
+        {{/if}}
+        {{/each}}
+      </ol>
+    </div>
+
+  </div>
+
+  <div class="row text-white">
+    <div class="col-lg-12 text-center">
+      <h2>Add a Burger</h2>
+      <form class="create-form">
+    </div>
+  </div>
+
+  <div class="row text-white">
+    <div class="form-group col-lg-12 text-center">
+      <label for="bur"></label>
+      <!-- <input type="text" id="bur" name="name"> -->
+      <textarea id="bur" name="name" rows="1" cols="40"></textarea>
+      <div>
+        <button type="submit">Order Burger</button>
+      </div>
+      </form>
+    </div>
+  </div>
 </div>
